--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,21 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Fmod stuff
+/Assets/Plugins/FMOD/Resources/FMODStudioCache.asset
+/Assets/Plugins/FMOD/Resources/FMODStudioCache.asset.meta
+fmod.log
+fmod_editor.log
+Assets/StreamingAssets
+Assets/StreamingAssets.meta
+*.user
+*.unsaved
+*.cache
+
+#Mac specific files
+.DS_Store
+
+# User settings
+UserSettings/*
+
+
